--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,4 +34,4 @@ jobs:
       - name: Build and push Docker image
         run: |
          docker build -t 513948/cloud-concepts:latest .
-         docker push 513948/cloud-concepts:late
+         docker push 513948/cloud-concepts:latest
