--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,5 +33,5 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-         docker build -t 513948/cloud-concepts:latest .
-         docker push 513948/cloud-concepts:latest
+         docker build -t 513948/cloud-concepts2:latest .
+         docker push 513948/cloud-concepts2:latest
